-created group leader html and css -made login button component -made logo button component -made logo/login css

--- a/src/app/css/homepage.css
+++ b/src/app/css/homepage.css
@@ -16,7 +16,7 @@
 }
 
 .home-title {
-  color: var(--primary-blue);
+  color: var(--primaryBlue);
   font-weight: 700;
   font-size: 4rem;
   text-align: center;
