--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -30,3 +30,91 @@
   align-items: center;
   width: 100%;
 }
+
+.back-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  align-self: flex-start;
+  margin-left: 30px;
+  font-size: 3rem;
+  color: var(--primaryBlue);
+}
+
+/* upload page */
+
+.upload-section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.upload-form {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 30px;
+  border-radius: 8px;
+  color: var(--primaryBlue);
+  font-weight: 700;
+  font-size: 1.8rem;
+  width: 98%;
+}
+
+.upload-row {
+  display: grid;
+  grid-template-columns: 1fr 2fr 20px;
+  align-items: center;
+  gap: 15px;
+}
+
+.file-input-wrapper {
+  border: 3px solid var(--primaryBlue);
+  border-radius: 6px;
+  padding: 10px 15px 15px 15px;
+  text-align: left;
+}
+
+.file-input {
+  width: 100%;
+  font-size: 1rem;
+}
+
+.upload-icon {
+  font-size: 2rem;
+  color: var(--primaryBlue);
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 35px;
+}
+
+.upload-icon i {
+  font-size: 2.4rem;
+  color: var(--primaryBlue);
+}
+
+.upload-icon:hover {
+  transform: scale(1.1);
+}
+
+/* edit admin page */
+
+.search-container {
+  width: 85%;
+  margin: 0 auto 20px auto;
+}
+
+.search-input {
+  width: 100%;
+  border: 3px solid var(--primaryBlue);
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 1.4rem;
+  font-family: inherit;
+  color: var(--primaryBlue);
+  font-weight: 600;
+}
