--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -38,8 +38,14 @@
   align-self: flex-start;
   margin-left: 30px;
   font-size: 3rem;
+  font-weight: 700;
   color: var(--primaryBlue);
 }
+
+.back-button:hover {
+  transform: scale(1.1);
+}
+
 
 /* upload page */
 
@@ -101,7 +107,7 @@
   transform: scale(1.1);
 }
 
-/* edit admin page */
+/* edit admin, mentor, freshmen page */
 
 .search-container {
   width: 85%;
@@ -117,4 +123,130 @@
   font-family: inherit;
   color: var(--primaryBlue);
   font-weight: 600;
+}
+
+/* edit groups page (manual add) */
+
+.form-container {
+    border: 3px solid var(--primaryBlue);
+    padding: 10px 10px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+.manual-add-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  font-family: inherit;
+  color: var(--primaryBlue);
+  font-weight: 700;
+  margin: 10px 30px;
+}
+.edit-user-form {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  width: 100%;
+  font-family: inherit;
+  color: var(--primaryBlue);
+  font-weight: 700;
+  margin: 20px 30px;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 30px;
+  font-size: 25px;
+}
+
+.form-label {
+  width: 240px;
+  text-align: left;
+}
+
+.form-input {
+  border: 4px solid var(--primaryBlue);
+  padding: 10px;
+  width: 400px;
+  font-size: 1.4rem;
+  font-family: inherit;
+  color: var(--primaryBlue);
+  font-weight: 400;
+}
+
+.form-select {
+  border: 4px solid var(--primaryBlue);
+  border-radius: 0px;
+  padding: 10px;
+  width: 650px;
+  font-size: 1.4rem;
+  font-family: inherit;
+  color: var(--primaryBlue);
+  font-weight: 600;
+  background-color: white;
+  margin: 20px 0px;
+}
+
+.checkbox-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 80px;
+  margin: 0px 0px 20px 0px;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 30px;
+}
+
+.checkbox-input {
+  width: 40px;
+  height: 40px;
+  border: 3px solid var(--primaryBlue);
+}
+
+.save-button-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 10px 0px;
+}
+
+/* edit groups page dropdown */
+
+.info-pairs {
+  display: flex;
+  flex-wrap: wrap;       
+  gap: 30px 50px;       
+  margin-bottom: 20px;
+}
+
+
+.info-pair {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;            
+  min-width: 200px;     
+}
+
+.info-label {
+  color: var(--primaryBlue);
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.info-value {
+  color: var(--textGrey);
+  font-weight: normal;
+  font-size: 30px;
 }
