--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -223,30 +223,36 @@
 
 /* edit groups page dropdown */
 
-.info-pairs {
-  display: flex;
+.edit-group-row {
+ display: flex;
+  flex-direction: row;
   flex-wrap: wrap;       
-  gap: 30px 50px;       
-  margin-bottom: 20px;
+  gap: 0px 30px;       
+  margin: 10px 20px 50px 20px;
 }
 
-
-.info-pair {
+.edit-group-pair {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 10px;            
+  gap: 30px;            
   min-width: 200px;     
-}
+}    
 
-.info-label {
+
+.edit-group-label {
+  width: auto;
+  text-align: left;
   color: var(--primaryBlue);
-  font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
 }
 
-.info-value {
+.edit-group-input {
+  border: 4px solid var(--primaryBlue);
+  padding: 10px;
+  min-width: 200px;
+  font-size: 1.4rem;
+  font-family: inherit;
   color: var(--textGrey);
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 400;
 }
