--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -121,7 +121,7 @@
   padding: 10px;
   font-size: 1.4rem;
   font-family: inherit;
-  color: var(--primaryBlue);
+  color: var(--textGrey);
   font-weight: 600;
 }
 
@@ -167,6 +167,8 @@
 
 .form-label {
   width: 240px;
+  font-size: 25px;
+  color: var(--primaryBlue);
   text-align: left;
 }
 
@@ -176,8 +178,23 @@
   width: 400px;
   font-size: 1.4rem;
   font-family: inherit;
-  color: var(--primaryBlue);
+  color: var(--textGrey);
   font-weight: 400;
+}
+
+.form-input-large {
+   width: 600px; 
+  border: 4px solid var(--primaryBlue);
+  padding: 10px;
+  font-size: 1.4rem;
+  font-family: inherit;
+  color: var(--textGrey);
+  font-weight: 400;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  resize: none;   
+  overflow: hidden;
+  height: auto;  
 }
 
 .form-select {
@@ -187,7 +204,7 @@
   width: 650px;
   font-size: 1.4rem;
   font-family: inherit;
-  color: var(--primaryBlue);
+  color: var(--textGrey);
   font-weight: 600;
   background-color: white;
   margin: 20px 0px;
