-coded admin view all group info page

--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -294,5 +294,34 @@
   display: flex;
   justify-content: center;
   margin: 30px ;
+  
+}
 
+/* View All Groups Page */
+
+.info-pairs {
+  display: flex;
+  flex-wrap: wrap;       
+  gap: 30px 50px;       
+  margin-bottom: 20px;
+}
+
+.info-pair {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;            
+  min-width: 200px;     
+}
+
+.info-label {
+  color: var(--primaryBlue);
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.info-value {
+  color: var(--textGrey);
+  font-weight: normal;
+  font-size: 30px;
 }
