--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -111,7 +111,7 @@
 
 .search-container {
   width: 100%;
-  margin: 20px 0px 20px 15%;
+  margin: 60px 0px 20px 15%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -135,6 +135,14 @@
   font-family: inherit;
   color: var(--textGrey);
   font-weight: 600;
+}
+
+.info-box{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 /* edit groups page (manual add) */
