--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -219,16 +219,15 @@
 }
 
 .form-select {
-  border: 4px solid var(--primaryBlue);
-  border-radius: 0px;
+  flex: 1;
+  border: 3px solid var(--primaryBlue);
+  border-radius: 4px;
   padding: 10px;
-  width: 650px;
   font-size: 1.4rem;
   font-family: inherit;
   color: var(--textGrey);
   font-weight: 600;
-  background-color: white;
-  margin: 20px 0px;
+  width: 400px;
 }
 
 .checkbox-row {
