--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -115,6 +115,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 8%;
 }
 
 .search-row {
@@ -124,6 +125,14 @@
   gap: 10px;
   width: 100%;
   max-width: 600px;
+}
+
+.search-dropdown{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  max-width: 400px;
 }
 
 .search-input {
